# gr-aggregations

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
src/gr-aggregations/: borda_count.py  gr-aggregations.py  ranking.py
src/gr_aggregation/: aggregation.py
tests/: new_test.py  test_completeness.py
