[project]
name = "gr-aggregations"
version = "0.0.1"
authors = [
  { name="Ariel Smith", email="arielsmithzerega@gmail.com" },
]
description = "Aggregation methods for scoring/ranking in group recommendations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"